# auto-ria-price-prediction

./: README.md  app.py  pyproject.toml  requiremenets.txt  requirements.txt
data/: auto_ria_clean.csv  auto_ria_raw.csv
models/: lightgbm.pkl
notebooks/: 01_scraping.ipynb  02_eda.ipynb  03_modeling.ipynb
